--- a/packages/ui/src/components/dashboard/aeria-prompt/aeria-prompt.less
+++ b/packages/ui/src/components/dashboard/aeria-prompt/aeria-prompt.less
@@ -15,7 +15,7 @@
       border-right: 1px solid var(--theme-border-color);
     }
 
-    &--normal {
+    &--primary {
       color: var(--theme-blueish);
     }
 
