--- a/packages/ui/src/components/aeria-button/aeria-button.less
+++ b/packages/ui/src/components/aeria-button/aeria-button.less
@@ -9,6 +9,8 @@
 }
 
 .button {
+  --border-color: var(--button-border-color, var(--theme-border-color));
+
   position: relative;
   padding: .35em 1em;
 
@@ -38,7 +40,7 @@
   }
 
   &--transparent {
-    border: 1px solid var(--theme-border-color);
+    border: 1px solid var(--border-color);
     font-weight: 300;
 
     &:hover {
@@ -46,14 +48,22 @@
     }
   }
 
+  &--alt,
   &--primary {
-    background: var(--theme-brand-color-shade-2);
-    border-color: var(--theme-brand-color-shade-2);
-
     :deep(*) {
       color: var(--theme-brand-color-contrast);
       fill: var(--theme-brand-color-contrast);
     }
+  }
+
+  &--alt {
+    background: var(--theme-brand-color-shade-3);
+    border-color: var(--theme-brand-color-shade-3);
+  }
+
+  &--primary {
+    background: var(--theme-brand-color-shade-2);
+    border-color: var(--theme-brand-color-shade-2);
   }
 
   &--small {
