fix(ui): fix styling and aeria-search.vue bug

--- a/packages/ui/src/components/aeria-panel/aeria-panel.less
+++ b/packages/ui/src/components/aeria-panel/aeria-panel.less
@@ -44,7 +44,7 @@
     &--floating, &--fixed-right {
       .panel__header {
         padding: .6rem 1.4rem;
-        box-sizing: content-panel;
+        box-sizing: content-box;
 
         font-weight: 600;
         font-size: 14pt;
