--- a/packages/ui/src/components/aeria-card/aeria-card.less
+++ b/packages/ui/src/components/aeria-card/aeria-card.less
@@ -3,6 +3,7 @@
   overflow: hidden;
   background: var(--theme-background-color-shade-2);
   border-radius: var(--theme-radius-extra-large);
+  border: 1px solid var(--theme-frame-color);
 
   &--inactive {
     opacity: .6;
@@ -45,6 +46,7 @@
 
     background: var(--theme-background-color-shade-3);
     color: var(--theme-foreground-color);
+    border-top: 1px solid var(--theme-frame-color);
   }
 
   &__footer-upper {
