--- a/packages/ui/src/components/aeria-panel/aeria-panel.less
+++ b/packages/ui/src/components/aeria-panel/aeria-panel.less
@@ -45,6 +45,7 @@
       .panel__header {
         padding: .6rem 1.4rem;
         box-sizing: content-box;
+        border-bottom: 1px solid var(--theme-frame-color);
 
         font-weight: 600;
         font-size: 14pt;
