--- a/packages/ui/src/components/form/aeria-file/aeria-file.less
+++ b/packages/ui/src/components/form/aeria-file/aeria-file.less
@@ -23,6 +23,7 @@
     column-gap: 1rem;
     overflow: hidden;
 
+    border: 1px solid var(--theme-frame-color);
     border-radius: var(--theme-radius-medium);
     background: var(--theme-background-color-shade-2);
     padding: 1rem;
