--- a/packages/ui/src/less/theme.less
+++ b/packages/ui/src/less/theme.less
@@ -1,4 +1,5 @@
 .theme-defaults() {
+  --theme-frame-color: transparent;
   --theme-input-padding: .8rem;
   --theme-input-height: 20px;
   --theme-input-padding-large: .9rem 2.4rem;
