feat(ui): theming

--- a/packages/ui/src/components/aeria-button/aeria-button.less
+++ b/packages/ui/src/components/aeria-button/aeria-button.less
@@ -17,7 +17,7 @@
   border-radius: var(--theme-radius-medium);
   outline: none;
   font-weight: 700;
-  letter-spacing: 1px;
+  letter-spacing: .2pt;
 
   border: 1px solid transparent;
   color: var(--theme-foreground-color);
