--- a/packages/ui/themes/light.less
+++ b/packages/ui/themes/light.less
@@ -3,7 +3,7 @@
 .light-theme(@brand-color, @background-color) {
   .theme-defaults();
   --theme-brand-color: @brand-color;
-  --theme-brand-color-shade-1: mix(green, lighten(@brand-color, 12%), 30%);
+  --theme-brand-color-shade-1: spin(@brand-color, 20%);
   --theme-brand-color-shade-2: darken(@brand-color, 8%);
   --theme-brand-color-shade-3: darken(@brand-color, 13%);
   --theme-brand-color-contrast: contrast(@brand-color);
@@ -15,7 +15,7 @@
   --theme-background-color-shade-5: darken(@background-color, 6%);
   --theme-shadow-color: darken(@background-color, 12%);
   --theme-body-background: @background-color;
-  --theme-border-color: darken(@background-color, 8%);
-  --theme-redish: lighten(mix(red, @brand-color, 95%), 10%);
-  --theme-blueish: lighten(mix(blue, @brand-color, 95%), 10%);
+  --theme-border-color: darken(@background-color, 6%);
+  --theme-redish: lighten(red, 15%);
+  --theme-blueish: lighten(blue, 15%);
 }
