feat: persist state using URL

--- a/packages/ui/src/components/aeria-accordion/aeria-accordion.less
+++ b/packages/ui/src/components/aeria-accordion/aeria-accordion.less
@@ -1,7 +1,7 @@
 .accordion {
   color: var(--theme-foreground-color);
   background: var(--theme-background-color-shade-4);
-  border: 1px solid var(--theme-frame-color);
+  border: var(--theme-frame-border);
   border-radius: var(--theme-radius-large);
   overflow: hidden;
 
