--- a/packages/ui/src/components/aeria-card/aeria-card.less
+++ b/packages/ui/src/components/aeria-card/aeria-card.less
@@ -2,8 +2,8 @@
   position: relative;
   overflow: hidden;
   background: var(--theme-background-color-shade-2);
+  border: var(--theme-frame-border);
   border-radius: var(--theme-radius-extra-large);
-  border: 1px solid var(--theme-frame-color);
 
   &--inactive {
     opacity: .6;
@@ -46,7 +46,7 @@
 
     background: var(--theme-background-color-shade-3);
     color: var(--theme-foreground-color);
-    border-top: 1px solid var(--theme-frame-color);
+    border-top: var(--theme-frame-border);
   }
 
   &__footer-upper {
