--- a/packages/ui/src/components/form/aeria-input/aeria-input.less
+++ b/packages/ui/src/components/form/aeria-input/aeria-input.less
@@ -31,7 +31,7 @@
     &>.input__input,
     &>.input__textarea {
       background: var(--background-color);
-      border: 1px solid var(--theme-frame-color);
+      border: var(--theme-frame-border);
     }
 
     &--light {
@@ -110,7 +110,7 @@
     display: flex;
     place-items: center;
     background: var(--background-color);
-    border: 1px solid var(--theme-frame-color);
+    border: var(--theme-frame-border);
     border-width: 1px 1px 1px 0;
 
     padding: 0 .6em;
