--- a/packages/ui/src/components/form/aeria-search/_internals/components/aeria-search-container/aeria-search-container.less
+++ b/packages/ui/src/components/form/aeria-search/_internals/components/aeria-search-container/aeria-search-container.less
@@ -1,7 +1,7 @@
 .container {
   background: var(--theme-background-color-shade-3);
+  border: var(--theme-frame-border);
   border-radius: var(--theme-radius-medium);
-  border: 1px solid var(--theme-frame-color);
 
   &__content {
     max-height: 20rem;
