--- a/packages/ui/src/less/polyfill.less
+++ b/packages/ui/src/less/polyfill.less
@@ -18,28 +18,13 @@ body {
   font-size: 15px;
 }
 
-body::-webkit-scrollbar {
-  width: 6px;
-}
-
-body::-webkit-scrollbar-track {
-  background: #ddd;
-}
-
-body::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background: #555;
+*::-webkit-scrollbar {
+  width: 0;
 }
 
 a:link, a:visited, a:hover, a:active {
   color: inherit;
   text-decoration: none;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
 }
 
 input[type=number] {
