--- a/packages/ui/src/components/form/aeria-select/aeria-select.less
+++ b/packages/ui/src/components/form/aeria-select/aeria-select.less
@@ -1,6 +1,6 @@
 .select {
   --background-color: var(--select-background-color, var(--theme-background-color-shade-3));
-  --border-color: var(--select-border-color, var(--theme-frame-color));
+  --border: var(--select-border, var(--theme-frame-border));
 
   display: flex;
   align-items: center;
