--- a/packages/ui/src/components/form/aeria-search/_internals/components/aeria-search-container/aeria-search-container.less
+++ b/packages/ui/src/components/form/aeria-search/_internals/components/aeria-search-container/aeria-search-container.less
@@ -10,8 +10,13 @@
   }
 
   &__footer {
-    padding: var(--theme-input-padding);
     font-size: .8rem;
     color: var(--theme-foreground-color);
+    padding: var(--theme-input-padding);
+    height: var(--theme-input-height);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
