--- a/packages/ui/src/components/form/aeria-select/aeria-select.less
+++ b/packages/ui/src/components/form/aeria-select/aeria-select.less
@@ -18,6 +18,7 @@
 
   &__select {
     width: 100%;
+    height: var(--theme-input-height);
     min-width: 5rem;
     font-family: unset;
     padding: var(--theme-input-padding);
@@ -42,6 +43,7 @@
 
       :deep(option) {
         padding: var(--theme-input-padding);
+        height: var(--theme-input-height);
 
         &[data-selected="true"] {
           background: var(--theme-brand-color);
