--- a/packages/ui/src/components/form/aeria-input/aeria-input.less
+++ b/packages/ui/src/components/form/aeria-input/aeria-input.less
@@ -31,7 +31,7 @@
     &>.input__input,
     &>.input__textarea {
       background: var(--background-color);
-      border: var(--theme-frame-border);
+      border: 1px solid var(--background-color);
     }
 
     &--light {
@@ -48,6 +48,8 @@
     width: 100%;
     outline: none;
     border: 0;
+    height: var(--theme-input-height);
+    border: 1px solid red;
 
     &--normal, &--bold {
       color: var(--theme-foreground-color);
@@ -62,6 +64,7 @@
 
     &--bold {
       padding: var(--theme-input-padding-large);
+      height: var(--theme-input-height-large);
       font-size: 12.5pt;
     }
 
