--- a/packages/ui/src/less/theme.less
+++ b/packages/ui/src/less/theme.less
@@ -1,8 +1,9 @@
 .theme-defaults() {
   --theme-frame-color: none;
   --theme-input-padding: .8rem;
-  --theme-input-height: 20px;
   --theme-input-padding-large: .9rem 2.4rem;
+  --theme-input-height: 2.9rem;
+  --theme-input-height-large: 3.2rem;
   --theme-radius-medium: 0;
   --theme-radius-large: 4px;
   --theme-radius-extra-large: 16px;
