--- a/packages/ui/src/less/polyfill.less
+++ b/packages/ui/src/less/polyfill.less
@@ -4,14 +4,13 @@
 }
 
 html {
+  overflow: hidden scroll;
   scroll-behavior: smooth;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 html, body {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
@@ -27,8 +26,7 @@ a:link, a:visited, a:hover, a:active {
   text-decoration: none;
 }
 
-input[type=number] {
-  -moz-appearance: textfield;
+input[type="number"] {
   appearance: textfield;
 }
 
