--- a/packages/ui/src/components/aeria-grid/aeria-grid.less
+++ b/packages/ui/src/components/aeria-grid/aeria-grid.less
@@ -3,16 +3,16 @@
   gap: 1rem;
   
   &:not(&--list) {
-    @media screen and (min-width: 600px) {
+    @media screen and (width >= 600px) {
       gap: 1.6rem;
       grid-template-columns: repeat(2, 1fr);
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (width >= 1200px) {
       grid-template-columns: repeat(3, 1fr);
     }
 
-    @media screen and (min-width: 1400px) {
+    @media screen and (width >= 1400px) {
       grid-template-columns: repeat(4, 1fr);
     }
   }
