--- a/packages/ui/src/components/aeria-panel/aeria-panel.less
+++ b/packages/ui/src/components/aeria-panel/aeria-panel.less
@@ -1,7 +1,7 @@
 .padding {
   padding: 1.4rem;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (width >= 768px) {
     padding: 1.8rem 2.4rem;
   }
 }
@@ -16,8 +16,8 @@
 
   &__content {
     display: flex;
-    flex-direction: column;
     overflow: hidden;
+    flex-direction: column;
     padding: 0;
 
     &--rounded {
@@ -25,14 +25,14 @@
     }
 
     &--outer-header {
-      background: transparent !important;
       border: none !important;
+      background: transparent !important;
 
       .panel__body,
       .panel__footer
       {
-        background: var(--theme-background-color);
         border-radius: 5px;
+        background: var(--theme-background-color);
       }
     }
 
@@ -44,14 +44,13 @@
 
     &--floating, &--fixed-right {
       .panel__header {
-        padding: .6rem 1.4rem;
         box-sizing: content-box;
+        padding: .6rem 1.4rem;
         border-bottom: var(--theme-frame-border);
-
-        font-weight: 600;
         font-size: 14pt;
+        font-weight: 600;
 
-        @media screen and (min-width: 768px) {
+        @media screen and (width >= 768px) {
           padding: .6rem 2.4rem;
         }
       }
@@ -60,14 +59,13 @@
     &--floating {
       position: fixed;
       top: 50%;
-      transform: translateY(-50%);
-
-      max-width: 90vw;
       min-width: 90vw;
+      max-width: 90vw;
       max-height: 80vh;
       border-radius: var(--theme-radius-large);
+      transform: translateY(-50%);
 
-      @media screen and (min-width: 768px) {
+      @media screen and (width >= 768px) {
         min-width: var(--min-width);
         max-width: var(--max-width);
       }
@@ -75,16 +73,15 @@
 
     &--fixed-right {
       position: fixed;
-      right: 0;
       top: 0;
+      right: 0;
       width: 100vw;
       height: 100vh;
-
-      overscroll-behavior: contain;
       border: 0;
       border-radius: 0;
+      overscroll-behavior: contain;
 
-      @media screen and (min-width: 768px) {
+      @media screen and (width >= 768px) {
         width: 46rem;
       }
     }
@@ -95,7 +92,7 @@
     }
 
     &--transparent-mobile {
-      @media screen and (max-width: 768px) {
+      @media screen and (width <= 768px) {
         border: none !important;
         background: none !important;
 
@@ -108,12 +105,11 @@
 
   &__header {
     display: flex;
+    min-height: 3rem;
     align-items: center;
     line-height: 100%;
 
-    min-height: 3rem;
-
-    :deep([data-component=icon]) {
+    :deep([data-component="icon"]) {
       width: 1.2rem;
     }
 
@@ -124,16 +120,16 @@
 
   &__header-left {
     display: flex;
-    align-items: center;
     flex: 1;
+    align-items: center;
   }
 
   &__body {
     display: flex;
     flex-direction: column;
-    row-gap: 1.8rem;
     overflow-y: auto;
     overscroll-behavior: contain;
+    row-gap: 1.8rem;
 
     &--padded {
       .padding();
@@ -144,22 +140,23 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    column-gap: 1rem;
-    margin-top: auto;
 
+    border-top: 1px solid var(--theme-border-color);
+    margin-top: auto;
+    column-gap: 1rem;
     transition: box-shadow .3s;
+
     &--padded {
       padding: 1rem 1.4rem;
 
-      @media screen and (min-width: 768px) {
+      @media screen and (width >= 768px) {
         padding: 1rem 2.4rem;
       }
     }
 
-    border-top: 1px solid var(--theme-border-color);
     &--shadowed {
-      box-shadow: 0 4px 20px var(--theme-shadow-color);
       z-index: 10;
+      box-shadow: 0 4px 20px var(--theme-shadow-color);
     }
   }
 }
