--- a/packages/ui/src/components/aeria-table/aeria-table.less
+++ b/packages/ui/src/components/aeria-table/aeria-table.less
@@ -6,10 +6,10 @@
 
 .table {
   width: 100%;
-  border-spacing: 0;
   border-radius: var(--theme-radius-large);
+  border-spacing: 0;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (width >= 768px) {
     overflow: hidden;
     border: var(--theme-frame-border);
   }
@@ -21,12 +21,11 @@
       display: table-row;
     }
 
-    @media screen and (min-width: 768px) {
-      height: 3rem;
+    @media screen and (width >= 768px) {
       display: table-row;
-      text-align: left;
-
+      height: 3rem;
       background: var(--theme-background-color-shade-4);
+      text-align: left;
     }
 
     &>th {
@@ -38,23 +37,23 @@
   :deep(tbody) > tr,
   :deep(tfoot) > tr {
     height: 3rem;
-    background: var(--theme-background-color-shade-2);
     border: var(--theme-frame-border);
+    background: var(--theme-background-color-shade-2);
 
-    @media screen and (min-width: 768px) {
+    @media screen and (width >= 768px) {
       border: 0;
+
       &:hover {
         background: var(--theme-background-color-shade-2);
       }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (width <= 768px) {
       display: flex;
-      flex-direction: column;
-      height: auto;
-
-      border-radius: var(--theme-radius-large);
       overflow: hidden;
+      height: auto;
+      flex-direction: column;
+      border-radius: var(--theme-radius-large);
 
       &:not(:last-child) {
         margin-bottom: 1rem;
@@ -63,7 +62,7 @@
 
     &:not(:last-child) {
       &>td {
-        @media screen and (min-width: 768px) {
+        @media screen and (width >= 768px) {
           border-bottom: 1px solid var(--theme-border-color);
         }
       }
@@ -77,14 +76,14 @@
 
   :deep(tfoot) > tr {
     &>td {
-      @media screen and (min-width: 768px) {
+      @media screen and (width >= 768px) {
         border-top: 1px solid var(--theme-border-color);
       }
     }
   }
 
   &__cell-grid {
-    @media screen and (max-width: 768px) {
+    @media screen and (width <= 768px) {
       display: flex;
       flex-direction: column;
     }
@@ -94,17 +93,17 @@
     display: none;
     font-weight: 500;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (width <= 768px) {
       display: inherit;
     }
   }
 
   &__cell-actions {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    column-gap: .8rem;
+    justify-content: flex-end;
     margin-left: auto;
+    column-gap: .8rem;
   }
 
   &__cell-subvalue {
@@ -123,9 +122,9 @@
 
   &__mobile-actions-button {
     display: grid;
-    place-items: center;
     width: 100%;
     height: 3.2rem;
+    place-items: center;
 
     &:not(last-child) {
       border-right: 1px solid var(--theme-border-color);
@@ -133,17 +132,16 @@
   }
 
   &__picture {
-    height: @picture-size;
-    width: @picture-size;
-    border-radius: var(--theme-radius-large);
     overflow: hidden;
-
+    width: @picture-size;
+    height: @picture-size;
     border: 1px solid var(--theme-border-color);
+    border-radius: var(--theme-radius-large);
   }
 
   &__empty {
     display: grid;
-    place-items: center;
     padding: 1.6rem 0;
+    place-items: center;
   }
 }
