--- a/packages/ui/src/components/aeria-tabs/aeria-tabs.less
+++ b/packages/ui/src/components/aeria-tabs/aeria-tabs.less
@@ -7,25 +7,25 @@
   &__tab {
     display: flex;
     align-items: center;
-    gap: .2rem;
     cursor: pointer;
+    gap: .2rem;
 
     &--current {
       font-weight: 600;
     }
 
     &--info {
-      @media screen and (min-width: 600px) {
+      @media screen and (width >= 600px) {
+        margin-right: .6rem;
         font-size: 12pt;
         font-weight: 500;
-        margin-right: .6rem;
       }
     }
   }
 
   &__context-menu-icon {
-    font-weight: 600;
     color: var(--theme-brand-color);
+    font-weight: 600;
 
     &:first-child {
       gap: 0;
