--- a/packages/ui/src/components/dashboard/aeria-crud-topbar/aeria-crud-topbar.less
+++ b/packages/ui/src/components/dashboard/aeria-crud-topbar/aeria-crud-topbar.less
@@ -1,12 +1,12 @@
 .topbar {
   &__preset {
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: center;
     gap: .4rem;
-    width: 100%;
 
-    @media screen and (min-width: 600px) {
+    @media screen and (width >= 600px) {
       justify-content: flex-start;
     }
   }
