--- a/packages/ui/src/less/main.less
+++ b/packages/ui/src/less/main.less
@@ -1,3 +1,3 @@
-@import 'polyfill';
-@import 'utilities';
-@import 'spinner';
+@import url('polyfill');
+@import url('utilities');
+@import url('spinner');
