--- a/packages/ui/themes/dark.less
+++ b/packages/ui/themes/dark.less
@@ -1,4 +1,4 @@
-@import '../dist/less/theme.less';
+@import url('../dist/less/theme.less');
 
 .dark-theme(@brand-color, @background-color) {
   .theme-defaults();
