--- a/packages/ui/src/components/form/aeria-form/aeria-form.less
+++ b/packages/ui/src/components/form/aeria-form/aeria-form.less
@@ -22,8 +22,12 @@
 
   &__field-label {
     font-size: 10.2pt;
-    font-weight: 500;
-    line-height: 1.8rem;
+    line-height: 1.6rem;
+
+    &--section {
+      font-size: 12pt;
+      font-weight: 500;
+    }
   }
 
   &__field-hint {
@@ -47,3 +51,4 @@
     font-size: .9rem;
   }
 }
+
